@@ -45,7 +45,7 @@ enum Ignore_Kind
   IGNORE_PARTICIPANT,
   IGNORE_TOPIC,
   IGNORE_PUBLICATION,
-  IGNORE_SUBSCRIPTION,
+  IGNORE_SUBSCRIPTION
 };
 
 extern int ignore_kind;
